Update finnish translations
(Old svn revision: 3648)

--- a/po/fi.po
+++ b/po/fi.po
@@ -45,7 +45,7 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Osan poista poistoo myös ponnahdus valikon.\n"
+"Osan poista poistoo myös ponnahdusvalikon.\n"
 "\n"
 "Haluatko poistaa osan?"
 
@@ -79,7 +79,7 @@ msgstr ""
 
 #: panel/item_dialog.c:458
 msgid "Caption:"
-msgstr "Valikko teksti:"
+msgstr "Valikkoteksti:"
 
 #: panel/item_dialog.c:497
 msgid "Tooltip:"
@@ -91,7 +91,7 @@ msgstr "Kuvakkeen esikatselu"
 
 #: panel/item_dialog.c:641
 msgid "Drag file onto this frame to change the icon"
-msgstr "Raahaa tiedosto tähänn kehykseen vaihtaaksesi kuvaketta"
+msgstr "Raahaa tiedosto tähän kehykseen vaihtaaksesi kuvaketta"
 
 #. create dialog
 #: panel/item_dialog.c:903
@@ -109,7 +109,7 @@ msgstr "Paina hiiren 3-napilla vaihtaaksesi osan"
 
 #: panel/item.c:359
 msgid "Add launcher"
-msgstr "Lisää ynnistin"
+msgstr "Lisää käynnistin"
 
 #: panel/item.c:363
 msgid "Add new item"
@@ -131,7 +131,7 @@ msgid ""
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versio %s\n"
-"Osa XFce Työpöytäympäristöä\n"
+"Osa XFce-työpöytäympäristöä\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:268
@@ -140,8 +140,8 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Ikkunamanagerisi ei näytä tukevan uusia ikkunamanageri ohjeita, jotka on "
-"määriteltyhttp://www.freedesktop.org.\n"
+"Ikkunamanagerisi ei näytä tukevan uusia ikkunamanageriohjeita, jotka on "
+"määritelty http://www.freedesktop.org.\n"
 "Jotkin XFce:n ominaisuudet eivät välttämättä toimi kuten on tarkoitus."
 
 #: panel/controls.c:308 panel/panel.c:150
@@ -158,7 +158,7 @@ msgstr "/_Lisää uusi osa"
 
 #: panel/controls.c:592
 msgid "This item has no configuration options"
-msgstr "Tällä osalla ei ole muokattavia ominaisuuksi"
+msgstr "Tällä osalla ei ole muokattavia ominaisuuksia"
 
 #: panel/panel.c:146
 msgid "/XFce Panel"
@@ -211,7 +211,7 @@ msgstr "Pelit"
 
 #: panel/icons.c:76
 msgid "Help browser"
-msgstr "Dokumentti selain"
+msgstr "Dokumenttiselain"
 
 #: panel/icons.c:77
 msgid "Multimedia"
@@ -243,7 +243,7 @@ msgstr "Pääte"
 
 #: panel/mcs_client.c:207
 msgid "Settings manager not available"
-msgstr "Asetus manageri ei ole saatavilla"
+msgstr "Asetusmanageri ei ole saatavilla"
 
 #: panel/popup.c:255
 msgid "Menu"
@@ -329,7 +329,7 @@ msgstr ""
 
 #: settings/xfce_settings_dialog.c:643
 msgid "XFce Panel Settings"
-msgstr "XFce Paneeli Asetukset"
+msgstr "XFce Paneelin Asetukset"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:655
@@ -344,7 +344,7 @@ msgstr "Sijainti"
 #. autohide
 #: settings/xfce_settings_dialog.c:692
 msgid "Behaviour"
-msgstr ""
+msgstr "Käytös"
 
 #: plugins/clock/clock.c:59
 msgid "Sunday"
@@ -466,7 +466,7 @@ msgstr "Xfce Kello"
 #: plugins/pager/pager.c:323
 #, fuzzy
 msgid "Graphical pager"
-msgstr "Käytä graafista työpöydän vaihdinta"
+msgstr "Käytä graafista työpöydän vaihtajaa"
 
 #: plugins/switcher/switcher.c:691
 msgid "Desktop switcher"
@@ -478,9 +478,9 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Pääsysti konfigurointijärjestelmään on estetty.\n"
+"Pääsysi konfigurointijärjestelmään on estetty.\n"
 "\n"
-"Kysy järjestelmäsi ylläpidolta enemmän tietoa asiasta"
+"Kysy järjestelmäsi ylläpidolta lisätietoa asiasta"
 
 #: plugins/systembuttons/systembuttons.c:145
 msgid "Lock the screen"
@@ -520,7 +520,7 @@ msgstr "Nappi 2:"
 
 #: plugins/systembuttons/systembuttons.c:667
 msgid "System buttons"
-msgstr "Järjestelmä napit"
+msgstr "Järjestelmänapit"
 
 #: plugins/mailcheck/mailcheck.c:532
 msgid "Mail box:"
@@ -528,7 +528,7 @@ msgstr "Postilaatikko:"
 
 #: plugins/mailcheck/mailcheck.c:624
 msgid "Mail command:"
-msgstr "Posti komento:"
+msgstr "Postikomento:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
@@ -536,14 +536,14 @@ msgstr "Komento joka ajetaan kun kuvaketta painetaan"
 
 #: plugins/mailcheck/mailcheck.c:710
 msgid "Interval (sec):"
-msgstr "Väli (sekunttia):"
+msgstr "Väli (sekuntia):"
 
 #: plugins/mailcheck/mailcheck.c:786
 msgid "Mail check"
 msgstr "Postin tarkistus"
 
 #~ msgid "XFce Desktop Environment"
-#~ msgstr "XFce Työpöytä Ympäristö"
+#~ msgstr "XFce Työpöytäympäristö"
 
 #~ msgid "Credits"
 #~ msgstr "Kehittäjät"
