--- a/po/fr.po
+++ b/po/fr.po
@@ -325,7 +325,7 @@ msgstr "Placer"
 
 #: settings/xfce_settings_dialog.c:584
 msgid "Autohide:"
-msgstr ""
+msgstr "Masquer automatiquement:"
 
 #: settings/xfce_settings_dialog.c:643
 msgid "XFce Panel Settings"
@@ -344,7 +344,7 @@ msgstr "Position"
 #. autohide
 #: settings/xfce_settings_dialog.c:692
 msgid "Behaviour"
-msgstr ""
+msgstr "Comportement"
 
 #: plugins/clock/clock.c:59
 msgid "Sunday"
