Reindent using Olivier's new .indent.pro file
(Old svn revision: 3686)

--- a/HACKING
+++ b/HACKING
@@ -1,3 +1,10 @@
+* 2003-05-17  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Updated the .indent.pro to use Olivier's new version. He seems he conformed to
+my standards this time ;-)) (<-- this is a joke, please laugh) Anyway, his new
+version has all the things I find important.
+
+
 * 2003-04-02  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 If you are interested in working on the panel that is of course enormously
