Add Japanese translation by Zhao-Ji <zhao-ji at awz dot ne dot jp>
(Old svn revision: 3688)

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,14 +1,13 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Xfce4-panel German translation
+# Copyright (C) 2003 Olivier Fourdan
+# This file is distributed under the same license as the xfce4-panel package.
+# Moritz Heiber <mistermoe@hackerboard.de>, 2003
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-05-13 09:09+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2003-05-27 12:30+0900\n"
 "Last-Translator: Zhao Ji <zhao-ji@awz.ne.jp>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -25,11 +24,11 @@ msgstr "項目変更"
 
 #: panel/controls_dialog.c:275 panel/item_dialog.c:981
 msgid "_Revert"
-msgstr "元に戻す"
+msgstr "元に戻す(_R)"
 
 #: panel/controls_dialog.c:280 panel/item_dialog.c:987
 msgid "_Done"
-msgstr "実行"
+msgstr "実行(_D)"
 
 #: panel/controls_dialog.c:304
 msgid "Type:"
@@ -37,7 +36,7 @@ msgstr "タイプ:"
 
 #: panel/controls_dialog.c:320 panel/item_dialog.c:594
 msgid "Position:"
-msgstr "ポジション:"
+msgstr "位置:"
 
 #: panel/controls_dialog.c:365 panel/controls.c:270
 msgid ""
@@ -56,11 +55,11 @@ msgstr "項目追加"
 
 #: panel/controls_dialog.c:483
 msgid "Select Item Type"
-msgstr ""
+msgstr "項目タイプ選択"
 
 #: panel/controls_dialog.c:506
 msgid "Select an item type from the list"
-msgstr ""
+msgstr "リストから項目のタイプを選択"
 
 #: panel/item_dialog.c:267
 msgid "Other Icon"
@@ -105,7 +104,7 @@ msgstr "メニュー"
 
 #: panel/item_dialog.c:547
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "メニューをランチャーへ追加"
 
 #: panel/item_dialog.c:693
 msgid "Icon Preview"
