Update catalan translations
(Old svn revision: 3691)

--- a/po/ca.po
+++ b/po/ca.po
@@ -274,7 +274,7 @@ msgstr "Vertical"
 
 #: settings/xfce_settings_dialog.c:217 settings/xfce_settings_dialog.c:446
 msgid "Left"
-msgstr "Esquerraº"
+msgstr "Esquerra"
 
 #: settings/xfce_settings_dialog.c:221 settings/xfce_settings_dialog.c:447
 msgid "Right"
@@ -316,7 +316,7 @@ msgstr "Normal"
 
 #: settings/xfce_settings_dialog.c:524
 msgid "Center the panel:"
-msgstr "Centre el plafó:"
+msgstr "Centra el plafó:"
 
 #: settings/xfce_settings_dialog.c:548
 msgid "Set"
