Updated translations and multiple file drop on backdrop list manager
(Old svn revision: 3701)

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-05-13 09:09+0200\n"
-"PO-Revision-Date: 2003-03-28 11:18+0100\n"
+"PO-Revision-Date: 2003-06-04 14:45+0100\n"
 "Last-Translator: Moritz Heiber <mistermoe@hackerboard.de>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr "Objekt verändern"
 
 #: panel/controls_dialog.c:275 panel/item_dialog.c:981
 msgid "_Revert"
-msgstr "Rückgängig"
+msgstr "_Rückgängig"
 
 #: panel/controls_dialog.c:280 panel/item_dialog.c:987
 msgid "_Done"
@@ -55,11 +55,11 @@ msgstr "Neues Objekt hinzufügen"
 
 #: panel/controls_dialog.c:483
 msgid "Select Item Type"
-msgstr ""
+msgstr "Objekttyp auswählen"
 
 #: panel/controls_dialog.c:506
 msgid "Select an item type from the list"
-msgstr ""
+msgstr "Ein Objekt aus der Liste auswählen"
 
 #: panel/item_dialog.c:267
 msgid "Other Icon"
@@ -100,11 +100,11 @@ msgstr "Tooltip:"
 #: panel/item_dialog.c:540
 #, fuzzy
 msgid "Menu:"
-msgstr "Menü"
+msgstr "Menü:"
 
 #: panel/item_dialog.c:547
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Menü für Starter"
 
 #: panel/item_dialog.c:693
 msgid "Icon Preview"
@@ -463,7 +463,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:439
 msgid "Hour mode:"
-msgstr ""
+msgstr "Stundenmodus:"
 
 #: plugins/clock/clock.c:446
 #, fuzzy
@@ -472,11 +472,11 @@ msgstr "24 Std. Uhr:"
 
 #: plugins/clock/clock.c:452
 msgid "12 hour"
-msgstr ""
+msgstr "12 Std. Uhr"
 
 #: plugins/clock/clock.c:458
 msgid "AM/PM"
-msgstr ""
+msgstr "AM/PM"
 
 #: plugins/clock/clock.c:498
 msgid "Show seconds:"
@@ -547,7 +547,7 @@ msgstr "Systembuttons"
 
 #: plugins/mailcheck/mailcheck.c:532
 msgid "Mail box:"
-msgstr "Mailbox"
+msgstr "Mailbox:"
 
 #: plugins/mailcheck/mailcheck.c:624
 msgid "Mail command:"
@@ -564,45 +564,3 @@ msgstr "Intervall (sek):"
 #: plugins/mailcheck/mailcheck.c:787
 msgid "Mail check"
 msgstr "Mailcheck"
-
-#~ msgid "Credits"
-#~ msgstr "Credits"
-
-#~ msgid "License"
-#~ msgstr "Lizenz"
-
-#~ msgid "/_Panel settings"
-#~ msgstr "/_Paneleinstellungen"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Mülleimer: 0 Dateien"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Mülleimer: %d Dateien / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Mülleimer"
-
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Von Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "AM-PM Modus:"
-
-#~ msgid "/_Edit ..."
-#~ msgstr "/_Editieren ..."
-
-#~ msgid "Traditional"
-#~ msgstr "Traditionell"
-
-#~ msgid "Modern"
-#~ msgstr "Modern"
-
-#~ msgid "Panel style:"
-#~ msgstr "Panelstil"
-
-#~ msgid "Show minibuttons"
-#~ msgstr "Minibuttons anzeigen"
