Updated german translations.
(Old svn revision: 3733)

--- a/HACKING
+++ b/HACKING
@@ -1,3 +1,8 @@
+* 2003-06-17  Benedikt Meurer <Benedikt.Meurer@unix-ag.uni-siegen.de>
+
+Added async-exec patch to improve the responsiveness of the UI.
+
+
 * 2003-05-17  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 Updated the .indent.pro to use Olivier's new version. He seems he conformed to
