Update finish translation
(Old svn revision: 3744)

--- a/po/fi.po
+++ b/po/fi.po
@@ -530,7 +530,7 @@ msgstr "Järjestelmänapit"
 
 #: plugins/separator/separator.c:147
 msgid "Separator"
-msgstr ""
+msgstr "Erotin"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
