--- a/po/de.po
+++ b/po/de.po
@@ -1,14 +1,14 @@
 # Xfce4-panel German translation
 # Copyright (C) 2003 Olivier Fourdan
 # This file is distributed under the same license as the xfce4-panel package.
-# Moritz Heiber <mistermoe@hackerboard.de>, 2003
+# Moritz Heiber <moritz-heiber@arcor.de>, 2003
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-07-03 10:52+0200\n"
-"PO-Revision-Date: 2003-06-04 14:45+0100\n"
-"Last-Translator: Moritz Heiber <mistermoe@hackerboard.de>\n"
+"PO-Revision-Date: 2003-07-03 14:23+0100\n"
+"Last-Translator: Moritz Heiber <moritz-heiber@arcor.de>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -534,7 +534,7 @@ msgstr "Systembuttons"
 
 #: plugins/separator/separator.c:147
 msgid "Separator"
-msgstr ""
+msgstr "Trennlinie"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
