spanish tranlation updates for 4.0 release.
(Old svn revision: 3746)

--- a/po/es.po
+++ b/po/es.po
@@ -76,7 +76,7 @@ msgstr "Ejecutar en _terminal"
 
 #: panel/item_dialog.c:452 plugins/mailcheck/mailcheck.c:687
 msgid "Use startup _notification"
-msgstr ""
+msgstr "Utilice notificaci"
 
 #: panel/item_dialog.c:479
 msgid "Caption:"
@@ -87,13 +87,12 @@ msgid "Tooltip:"
 msgstr "Etiqueta explicativa"
 
 #: panel/item_dialog.c:554
-#, fuzzy
 msgid "Menu:"
-msgstr "Menú"
+msgstr "Menú:"
 
 #: panel/item_dialog.c:561
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Pegarle un menú al lanzador"
 
 #: panel/item_dialog.c:704
 msgid "Icon Preview"
@@ -335,7 +334,7 @@ msgstr "Configurar"
 
 #: settings/xfce_settings_dialog.c:587
 msgid "Autohide:"
-msgstr ""
+msgstr "Ocultar automáticamente"
 
 #: settings/xfce_settings_dialog.c:655
 msgid "XFce Panel Settings"
@@ -354,7 +353,7 @@ msgstr "Posición"
 #. autohide
 #: settings/xfce_settings_dialog.c:704
 msgid "Behaviour"
-msgstr ""
+msgstr "Comportamiento"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
@@ -455,11 +454,11 @@ msgstr "Modo Horario"
 #: plugins/clock/clock.c:446
 #, fuzzy
 msgid "24 hour"
-msgstr "Reloj de 24 horas:"
+msgstr "24 horas"
 
 #: plugins/clock/clock.c:452
 msgid "12 hour"
-msgstr "Reloj de 12 horas"
+msgstr "12 horas"
 
 #: plugins/clock/clock.c:458
 msgid "AM/PM"
@@ -474,9 +473,8 @@ msgid "Xfce Clock"
 msgstr "Reloj de XFce"
 
 #: plugins/pager/pager.c:278
-#, fuzzy
 msgid "Graphical pager"
-msgstr "Usar paginador gráfico"
+msgstr "Paginador gráfico"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
@@ -534,7 +532,7 @@ msgstr "Botones de sistema"
 
 #: plugins/separator/separator.c:147
 msgid "Separator"
-msgstr ""
+msgstr "Separador"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
@@ -556,7 +554,6 @@ msgstr "Intervalo (seg):"
 msgid "Mail check"
 msgstr "Revisar correo"
 
-#, fuzzy
 #~ msgid "Add item"
 #~ msgstr "Añadir nuevo elemento"
 
