--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -76,24 +76,23 @@ msgstr "Ejecutar en _terminal"
 
 #: panel/item_dialog.c:452 plugins/mailcheck/mailcheck.c:687
 msgid "Use startup _notification"
-msgstr ""
+msgstr "Utilice notificación de inicio"
 
 #: panel/item_dialog.c:479
 msgid "Caption:"
-msgstr ""
+msgstr "Etiqueta:"
 
 #: panel/item_dialog.c:518
 msgid "Tooltip:"
-msgstr ""
+msgstr "Etiqueta emergente:"
 
 #: panel/item_dialog.c:554
-#, fuzzy
 msgid "Menu:"
 msgstr "Menú"
 
 #: panel/item_dialog.c:561
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Agregarle menú al lanzador"
 
 #: panel/item_dialog.c:704
 msgid "Icon Preview"
@@ -127,7 +126,7 @@ msgstr "Adicionar nuevo elemento"
 
 #: panel/item.c:509
 msgid "Launcher"
-msgstr ""
+msgstr "Lanzador"
 
 #: panel/main.c:129
 msgid "Are you sure you want to exit?"
@@ -150,6 +149,9 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
+"Su gestor de ventanas no soporta el protocolo definido en "
+"http://www.freedesktop.org. \n"
+"Algunas funciones podrián estar inutilizadas."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
@@ -157,7 +159,7 @@ msgstr "/Adicionar nuevo elemento"
 
 #: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
-msgstr ""
+msgstr "/_Propiedades..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
@@ -332,7 +334,7 @@ msgstr "Fijar"
 
 #: settings/xfce_settings_dialog.c:587
 msgid "Autohide:"
-msgstr ""
+msgstr "Ocultar automáticamente:"
 
 #: settings/xfce_settings_dialog.c:655
 msgid "XFce Panel Settings"
@@ -351,7 +353,7 @@ msgstr "Posición"
 #. autohide
 #: settings/xfce_settings_dialog.c:704
 msgid "Behaviour"
-msgstr ""
+msgstr "Comportamiento"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
@@ -439,28 +441,28 @@ msgstr "Análogo"
 
 #: plugins/clock/clock.c:370
 msgid "Digital"
-msgstr ""
+msgstr "Digital"
 
 #: plugins/clock/clock.c:374
 msgid "LED"
-msgstr ""
+msgstr "LED"
 
 #: plugins/clock/clock.c:439
 msgid "Hour mode:"
-msgstr ""
+msgstr "Modo de hora:"
 
 #: plugins/clock/clock.c:446
-#, fuzzy
+
 msgid "24 hour"
-msgstr "Reloj de 24 horas:"
+msgstr "24 horas"
 
 #: plugins/clock/clock.c:452
 msgid "12 hour"
-msgstr ""
+msgstr "12 horas"
 
 #: plugins/clock/clock.c:458
 msgid "AM/PM"
-msgstr ""
+msgstr "AM/PM"
 
 #: plugins/clock/clock.c:498
 msgid "Show seconds:"
@@ -471,9 +473,8 @@ msgid "Xfce Clock"
 msgstr "Reloj XFce"
 
 #: plugins/pager/pager.c:278
-#, fuzzy
 msgid "Graphical pager"
-msgstr "Usar pager gráfico"
+msgstr "Paginador gráfico"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
@@ -491,7 +492,7 @@ msgstr ""
 
 #: plugins/systembuttons/systembuttons.c:150
 msgid "Lock the screen"
-msgstr ""
+msgstr "Bloquear la estación"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:591
@@ -531,7 +532,7 @@ msgstr "Botones de sistema"
 
 #: plugins/separator/separator.c:147
 msgid "Separator"
-msgstr ""
+msgstr "Separador"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
@@ -553,7 +554,6 @@ msgstr "Intervalo (sec):"
 msgid "Mail check"
 msgstr "Revisar correo"
 
-#, fuzzy
 #~ msgid "Add item"
 #~ msgstr "Adicionar nuevo elemento"
 
