Tweak new separator plugin and update frnech po
(Old svn revision: 3747)

--- a/po/fr.po
+++ b/po/fr.po
@@ -93,7 +93,7 @@ msgstr "Menu"
 
 #: panel/item_dialog.c:561
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Associer un menu au lanceur"
 
 #: panel/item_dialog.c:704
 msgid "Icon Preview"
@@ -532,7 +532,7 @@ msgstr "Boutons système"
 
 #: plugins/separator/separator.c:147
 msgid "Separator"
-msgstr ""
+msgstr "Séparation"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
@@ -554,6 +554,3 @@ msgstr "Intervale (sec.):"
 msgid "Mail check"
 msgstr "Contrôle de courrier"
 
-#, fuzzy
-#~ msgid "Add item"
-#~ msgstr "Ajouter une entrée"
