--- a/po/de.po
+++ b/po/de.po
@@ -130,7 +130,7 @@ msgstr "Starter"
 
 #: panel/main.c:129
 msgid "Are you sure you want to exit?"
-msgstr "Sind sie sicher, das sie XFce beenden wollen?"
+msgstr "Sind sie sicher, dass sie XFce beenden wollen?"
 
 #: panel/main.c:259
 #, c-format
