Update some info
(Old svn revision: 3753)

--- a/HACKING
+++ b/HACKING
@@ -1,6 +1,6 @@
-* 2003-06-17  Benedikt Meurer <Benedikt.Meurer@unix-ag.uni-siegen.de>
-
-Added async-exec patch to improve the responsiveness of the UI.
+This file describes the coding style I prefer for the panel. If you want to
+help out with panel development, please try to conform to these 'rules'.
+-- Jasper
 
 
 * 2003-05-17  Jasper Huijsmans <huysmans@users.sourceforge.net>
