--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Xavier Maillard <zedek@fxgsproject.org>
 Michael Mosier <michael@spyonit.com>
 Erik Touve <etouve@earthlink.net>
 Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
+Bernhard Walle <Bernhard.Walle@gmx.de>
